:bug: Fix contrast

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -30,7 +30,7 @@ header {
     position: fixed;
     top: $content_padding / 2;
     left: $content_padding / 2;
-    color: $white;
+    color: $defaultcolor;
     text-decoration: none;
     font-size: 14px;
     line-height: $font_size;
